must test /comic